# lab11

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  HOMEWORK.md  LICENSE  README.md  Vagrantfile  docker-compose.yml
.github/workflows/: ci.yml
cmake/: HunterGate.cmake
demo/: main.cpp
docs/: ngrok.md  vagrant.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/include/: formatter_ex.hpp
formatter_ex_lib/sources/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/include/: formatter.hpp
formatter_lib/sources/: formatter.cpp
hello_world_application/: CMakeLists.txt
hello_world_application/sources/: main.cpp
scripts/: dev_server.sh  package_release.sh
solver_application/: CMakeLists.txt
solver_application/sources/: equation.cpp
solver_lib/: CMakeLists.txt
solver_lib/include/: solver.hpp
solver_lib/sources/: solver.cpp
tests/: CMakeLists.txt  test_formatter.cpp  test_solver.cpp
workflow_examples/: release.yml
